platform/kubernetes/technitium/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium
  namespace: dns
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.201.5
  externalTrafficPolicy: Local
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: http
      port: 5380
      targetPort: 5380
      protocol: TCP
  selector:
    app: technitium
